Serve smaller cached pronunciation videos
